--- a/packages/ui-app/src/DownloadButton.css
+++ b/packages/ui-app/src/DownloadButton.css
@@ -2,8 +2,28 @@
 /* This software may be modified and distributed under the terms
 /* of the ISC license. See the LICENSE file for details. */
 
+.accounts--Address {
+  padding: 0 2em;
+  text-align: center;
+}
+
+.accounts--Address-address {
+  display: inline-block;
+  font-family: monospace;
+  font-size: 1.5em;
+  padding: 0;
+}
+
+.accounts--Address-data {
+  padding: 0.5em 0;
+}
+
 .accounts--Address-download {
   display: inline-block;
+}
+
+.accounts--Address-icon {
+  display: block
 }
 
 .accounts--Address-modal {
